# drogue-workshops

./: README.md  antora.yml  rust-toolchain.toml
.github/workflows/: ci.yaml
examples/dfu-workshop/: Cargo.toml  rust-toolchain.toml
examples/dfu-workshop/.drogue/: config.toml
examples/dfu-workshop/app/: Cargo.toml  memory.x
examples/dfu-workshop/app/src/: main.rs
examples/dfu-workshop/bootloader/: Cargo.toml  memory.x
examples/wifi-websockets-workshop/: Cargo.toml  README.adoc
examples/wifi-websockets-workshop/.drogue/: config.toml
examples/wifi-websockets-workshop/src/: main.rs
modules/ROOT/pages/: index.adoc
modules/common/pages/: toolchain.adoc
modules/esp8266-wifi/: nav.adoc
modules/esp8266-wifi/pages/: drogue-cloud.adoc  firmware.adoc  index.adoc  making-changes.adoc
modules/getting-started/pages/: index.adoc
modules/quarkus-mqtt-starter/: nav.adoc
modules/quarkus-mqtt-starter/pages/: cloud.adoc  index.adoc  internals.adoc  kubernetes.adoc  local.adoc  peeking.adoc
modules/timeseries-as-a-service/: nav.adoc
modules/timeseries-as-a-service/images/: drawings.odg
modules/timeseries-as-a-service/pages/: architecture.adoc  conclusion.adoc  drogue.adoc  grafana.adoc  index.adoc  knative.adoc  simulating-data.adoc  summary.adoc  timescale.adoc  try.adoc  wait-there-is-more.adoc
modules/ttn-lorawan/: nav.adoc
modules/ttn-lorawan-quarkus/: nav.adoc
modules/ttn-lorawan-quarkus/pages/: drogue-cloud.adoc  firmware.adoc  index.adoc  keys.adoc  making-changes.adoc  quarkus-application.adoc
modules/ttn-lorawan/pages/: account-setup.adoc  drogue-cloud.adoc  firmware.adoc  index.adoc  making-changes.adoc  nodejs-application.adoc  quarkus-application.adoc  toolchain.adoc
modules/wifi-websockets/: nav.adoc
modules/wifi-websockets/pages/: db-and-grafana.adoc  drogue-cloud.adoc  firmware.adoc  index.adoc  making-changes.adoc  summary.adoc  toolchain.adoc  websocket.adocs
