[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>",
    "Jens Reimann <jreimann@redhat.com>",
    "Dejan Bosanac <dbosanac@redhat.com>"
]
edition = "2018"
name = "wifi-websockets-workshop"
version = "0.1.0"
resolver = "2"
description = "STM32 IoT Discovery board (iot01a) reporting sensor data using WiFi"
keywords = ["wifi", "hts221", "stm32l4", "networking", "iot", "stm32", "cloud", "dfu"]

[dependencies]
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

drogue-device = { version = "0.1.0", default-features = false, features = ["time", "wifi+eswifi", "defmt"] }
cortex-m-rt = "0.7.0"
cortex-m = "0.7"

reqwless = { version = "0.1", features = ["defmt"] }
heapless = "0.7"
futures = {version = "0.3", default-features = false }
critical-section = "0.2.5"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.4", default-features = false, features = ["heapless"] }
rand_core = { version = "0.6.2", default-features = false }
embedded-nal-async = "0.2.0"
embedded-tls = { version = "0.8.0", default-features = false, features = ["async"] }
cfg-if = "1.0.0"
embedded-io = "0.3.0"
atomic-polyfill = "0.1"
embassy = { version = "0.1.0", default-features = false, features=["time", "time-tick-32768hz", "nightly", "unstable-traits", "defmt"] }
embassy-stm32 = { version = "0.1.0", default-features = false, features = ["time-driver-any", "memory-x", "defmt"] }
embedded-hal = { version = "0.2.4", features = ["unproven"] }

[features]
default = ["b-l4s5i-iot01a"]
b-l4s5i-iot01a = ["embassy-stm32/stm32l4s5vi", "drogue-device/bsp+b_l4s5i_iot01a"]
b-l475e-iot01a = ["embassy-stm32/stm32l475vg", "drogue-device/bsp+b_l475e_iot01a"]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "6baddaf53982b75149cb7e91280c571f7fe2e7bc" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "6baddaf53982b75149cb7e91280c571f7fe2e7bc" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "6baddaf53982b75149cb7e91280c571f7fe2e7bc" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy.git", rev = "6baddaf53982b75149cb7e91280c571f7fe2e7bc" }
drogue-device = { git = "https://github.com/drogue-iot/drogue-device.git", rev = "fb8a9894d6c1d3871824e51b8a7665ec55127112" }
ector = { git = "https://github.com/drogue-iot/ector.git", rev = "63c08489da17ff92c493f21411411ce5ddd6154a" }
#drogue-device = { path = "../../../drogue-device/device" }
