[dependencies]
atomic-polyfill = '0.1'
cfg-if = '1.0.0'
cortex-m = '0.7'
cortex-m-rt = '0.7.0'
critical-section = '0.2.5'
defmt = '0.3'
embedded-io = '0.3.0'
embedded-nal-async = '0.2.0'
reqwless = { version = "0.1" }
futures = {version = "0.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.4", default-features = false, features = ["heapless"] }
heapless = "0.7"

[dependencies.defmt-rtt]
version = '0.3'

[dependencies.drogue-device]
default-features = false
features = [
    'time',
    'wifi+eswifi',
    'dfu',
    'tls',
]
version = "0.1.0"

[dependencies.embassy]
default-features = false
features = [
    'time',
    'time-tick-32768hz',
    'nightly',
    'unstable-traits',
]
version = '0.1.0'

[dependencies.embassy-embedded-hal]
default-features = false
version = '0.1.0'

[dependencies.embassy-boot-stm32]
default-features = false
version = '0.1.0'

[dependencies.embassy-stm32]
default-features = false
features = [
    'time-driver-any',
    'unstable-traits',
]
version = '0.1.0'

[dependencies.embedded-hal]
features = ['unproven']
version = '0.2.4'

[dependencies.embedded-tls]
default-features = false
features = ['async']
version = '0.8.0'

[dependencies.embedded-update]
features = ['nightly']
version = '0.7'

[dependencies.panic-probe]
features = ['print-defmt']
optional = true
version = '0.3'

[dependencies.panic-reset]
optional = true
version = '0.1.1'

[dependencies.rand_core]
default-features = false
version = '0.6.2'

[features]
blue = []
green = []
b-l475e-iot01a = [
    'embassy-stm32/stm32l475vg',
    'drogue-device/bsp+b_l475e_iot01a',
]
b-l4s5i-iot01a = [
    'embassy-stm32/stm32l4s5vi',
    'drogue-device/bsp+b_l4s5i_iot01a',
]
debug = [
    'panic-probe',
    'drogue-device/defmt',
    'embassy/defmt',
    'embedded-update/defmt',
    'reqwless/defmt',
]
default = [
    'b-l4s5i-iot01a',
    'panic-reset',
]

[package]
authors = [
    'Ulf Lilleengen <lulf@redhat.com>',
    'Bob McWhirter <bmcwhirt@redhat.com>',
    'Jens Reimann <jreimann@redhat.com>',
    'Dejan Bosanac <dbosanac@redhat.com>',
]
description = 'STM32 IoT Discovery board (iot01a) reporting sensor data using WiFi'
edition = '2018'
keywords = [
    'wifi',
    'hts221',
    'stm32l4',
    'networking',
    'iot',
    'stm32',
    'cloud',
    'dfu',
]
name = 'dfu-workshop-app'
resolver = '2'
version = '0.1.0'
